k8s-yaml-files/statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bankapp-service
spec:
  serviceName: "mysql"
  replicas: 1
  selector:
    matchLabels:
      app: dbbankapp
  template:
    metadata:
      labels:
        app: dbbankapp
    spec:
      containers:
      - name: mysql-db
        image: damodharbotta/bloodapp:dbimage
        ports:
        - containerPort: 3306
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: mysql-persistent-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
