k8s-yaml-files/db-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
spec:
    clusterIP: None
    selector:
       app: dbbankapp
    ports:
        - protocol: TCP
          port: 3306
          targetPort: 3306
