k8s-yaml-files/network-policy.yml
---
apiVersion: ne`tworking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bankapp-network-policy
spec:
  podSelector:
    matchLabels:
      app: bankapp
  policyTypes:
      - Ingress
      - Egress

  ingress:
  - from:
       - namespaceSelector:
         matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
              podSelector:
              matchLabels:
                    app.kubernetes.io/name: controller
    ports:
        - protocol: TCP
          port: 80
